--- a/2-workshop-I-email-subscribe/index.html
+++ b/2-workshop-I-email-subscribe/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    <main class="bg-zinc-700 flex justify-center items-center h-screen">
+      <div
+        class="card__container bg-zinc-800 rounded-xl p-2 flex flex-col md:flex-row items-center max-w-2xl mx-4 xl:mx-auto"
+      >
+        <div class="card__img md:w-1/3">
+          <img src="images/image.jpg" alt="" class="rounded-t-xl md:rounded-l-xl" />
+        </div>
+
+        <div class="card__content md:w-2/3 flex flex-col justify-center px-0 md:px-10 py-5">
+          <h3 class="text-white text-2xl mb-5">
+            Get diet and fitness tips in your inbox
+          </h3>
+
+          <p class="text-white">
+            Eat better and exercise better. Sign up for the Diet&Fitness
+            newsletter.
+          </p>
+
+          <form action="" class="mt-5 flex justify-between max-w-sm">
+            <input
+              type="text"
+              placeholder="Enter your email address"
+              class="bg-zinc-800 w-4/6 p-2 border-2 border-zinc-700 rounded-md text-white"
+            />
+            <button type="submit" class="bg-lime-500 px-4 py-2 rounded-md text-sm">Subscribe</button>
+          </form>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
