--- a/3-workshop-II-image-gallery/index.html
+++ b/3-workshop-II-image-gallery/index.html
@@ -3,7 +3,122 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Tailwind Images Gallery</title>
+
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body></body>
+  <body>
+    <main class="bg-teal-200 flex justify-center items-center lg:h-screen">
+      <div
+        class="content bg-white p-5 sm:p-16 md:p-28 lg:p-36 rounded-lg max-w-5xl"
+      >
+        <div class="nav__container flex mb-14">
+          <ul
+            class="nav__list flex justify-between sm:justify-end gap-x-2 sm:gap-x-10 w-full"
+          >
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link hover:border-b-2 border-black transition-all pb-1"
+                >Vector</a
+              >
+            </li>
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link hover:border-b-2 border-black transition-all pb-1"
+                >Illustrations</a
+              >
+            </li>
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link hover:border-b-2 border-black transition-all pb-1"
+                >Images</a
+              >
+            </li>
+            <li class="nav__item">
+              <a
+                href="#"
+                class="nav__link hover:border-b-2 border-black transition-all pb-1"
+                >Icons</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <div
+          class="serch__upload__container flex flex-col gap-y-3 sm:flex-row justify-between mb-8"
+        >
+          <div
+            class="search__container flex border-b-2 border-slate-200 items-center md:w-[300px]"
+          >
+            <input
+              type="text"
+              id="search"
+              placeholder="Search"
+              class="p-3 outline-0 flex-1"
+            />
+
+            <span
+              class="material-symbols-outlined text-slate-300 cursor-pointer w-fit"
+            >
+              search
+            </span>
+          </div>
+
+          <button
+            class="text-white bg-black py-3 px-12 rounded-lg hover:bg-zinc-800 transition-all"
+          >
+            Upload
+          </button>
+        </div>
+
+        <div
+          class="cards__container flex flex-row flex-wrap justify-center gap-3 lg:gap-5 items-center"
+        >
+          <div
+            class="card__img max-w-[400px] sm:max-w-[230px] md:hover:translate-y-[-4px] transition-all"
+          >
+            <a href="#"><img src="images/image1.jpg" alt="card-img" /></a>
+          </div>
+
+          <div
+            class="card__img max-w-[400px] sm:max-w-[230px] md:hover:translate-y-[-4px] transition-all"
+          >
+            <a href="#"><img src="images/image2.jpg" alt="card-img" /></a>
+          </div>
+
+          <div
+            class="card__img max-w-[400px] sm:max-w-[230px] md:hover:translate-y-[-4px] transition-all"
+          >
+            <a href="#"><img src="images/image3.jpg" alt="card-img" /></a>
+          </div>
+
+          <div
+            class="card__img max-w-[400px] sm:max-w-[230px] md:hover:translate-y-[-4px] transition-all"
+          >
+            <a href="#"><img src="images/image4.jpg" alt="card-img" /></a>
+          </div>
+
+          <div
+            class="card__img max-w-[400px] sm:max-w-[230px] md:hover:translate-y-[-4px] transition-all"
+          >
+            <a href="#"><img src="images/image5.jpg" alt="card-img" /></a>
+          </div>
+
+          <div
+            class="card__img max-w-[400px] sm:max-w-[230px] md:hover:translate-y-[-4px] transition-all"
+          >
+            <a href="#"><img src="images/image6.jpg" alt="card-img" /></a>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
